--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
 <!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
-<html>
+<html itemscope itemtype="http://schema.org/Product">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -15,7 +15,9 @@
   <meta name="description" content="Сайтик для распределения подарков на Новый год">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
-
+  <meta itemprop="name" content="New year">
+  <meta itemprop="description" content="Скрипт для распределения подарков на Новый год">
+  <meta itemprop="image" content="https://secure.gravatar.com/avatar/e69ea2d40777aad638a6b85041f76140?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png"><meta itemprop="name" content="New year">
 </head>
 
 <body>
@@ -29,6 +31,9 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
+          <g:plusone annotation="none"></g:plusone>
+
+<script type="text/javascript">
           <a href="https://github.com/paveldruzyak/new_year/tarball/master" class="download-button tar"><span>Download</span></a>
           <a href="https://github.com/paveldruzyak/new_year/zipball/master" class="download-button zip"><span>Download</span></a>
           <a href="https://github.com/paveldruzyak/new_year" class="code">fork New year on GitHub</a>
