--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
         <div class="download-bar">
         <div class="inner">
           <g:plusone annotation="none"></g:plusone>
-
-<script type="text/javascript">
           <a href="https://github.com/paveldruzyak/new_year/tarball/master" class="download-button tar"><span>Download</span></a>
           <a href="https://github.com/paveldruzyak/new_year/zipball/master" class="download-button zip"><span>Download</span></a>
           <a href="https://github.com/paveldruzyak/new_year" class="code">fork New year on GitHub</a>
@@ -47,7 +45,7 @@
 
 <h2>Установка</h2>
 
-<p>Для начала установи ruby и rubygem. 
+<p>Для начала установи ruby и rubygem.
 Если bundler не установлен, тогда:</p>
 
 <pre><code>gem install bundler
@@ -102,6 +100,14 @@ second@example.com
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+          <script type="text/javascript">
+            window.___gcfg = {lang: 'ru'};
 
+            (function() {
+              var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+              po.src = 'https://apis.google.com/js/plusone.js';
+              var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+            })();
+          </script>
 </body>
 </html>
