Put +1 to tagline

--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
       <h1 class="title">New year</h1>
     </header>
     <div id="container">
-      <p class="tagline">Сайтик для распределения подарков на Новый год</p>
+      <p class="tagline">
+          Сайтик для распределения подарков на Новый год
+          <span><g:plusone annotation="none"></g:plusone></span>
+      </p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <g:plusone annotation="none"></g:plusone>
           <a href="https://github.com/paveldruzyak/new_year/tarball/master" class="download-button tar"><span>Download</span></a>
           <a href="https://github.com/paveldruzyak/new_year/zipball/master" class="download-button zip"><span>Download</span></a>
           <a href="https://github.com/paveldruzyak/new_year" class="code">fork New year on GitHub</a>
