Show +1 with count

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta itemprop="name" content="New year">
   <meta itemprop="description" content="Скрипт для распределения подарков на Новый год">
-  <meta itemprop="image" content="https://secure.gravatar.com/avatar/e69ea2d40777aad638a6b85041f76140?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png"><meta itemprop="name" content="New year">
+  <meta itemprop="image" content="https://secure.gravatar.com/avatar/e69ea2d40777aad638a6b85041f76140?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     </header>
     <div id="container">
       <p class="tagline">
-          Сайтик для распределения подарков на Новый год
+          Скрипт для распределения подарков на Новый год
           <span><g:plusone annotation="none"></g:plusone></span>
       </p>
       <div id="main" role="main">
