Show count for +1

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="container">
       <p class="tagline">
           Скрипт для распределения подарков на Новый год
-          <span><g:plusone annotation="none"></g:plusone></span>
+          <span style="float:right;"><g:plusone></g:plusone></span>
       </p>
       <div id="main" role="main">
         <div class="download-bar">
