--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>New year</title>
+  <title>Тайный санта</title>
   <meta name="description" content="Сайтик для распределения подарков на Новый год">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta itemprop="name" content="New year">
+  <meta itemprop="name" content="Тайный санта">
   <meta itemprop="description" content="Скрипт для распределения подарков на Новый год">
   <meta itemprop="image" content="https://secure.gravatar.com/avatar/e69ea2d40777aad638a6b85041f76140?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png">
 </head>
@@ -24,12 +24,15 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">New year</h1>
+      <h1 class="title">Тайный санта</h1>
     </header>
     <div id="container">
       <p class="tagline">
           Скрипт для распределения подарков на Новый год
-          <span style="float:right;"><g:plusone></g:plusone></span>
+          <span style="float:right;">
+            <g:plusone></g:plusone>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://paveldruzyak.github.com/new_year/" data-text="Скрипт для распределения подарков на Новый год" data-via="paveldruzyak" data-lang="ru" data-size="large" data-related="paveldruzyak"></a>
+          </span>
       </p>
       <div id="main" role="main">
         <div class="download-bar">
@@ -110,6 +113,8 @@ second@example.com
               po.src = 'https://apis.google.com/js/plusone.js';
               var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
             })();
+          </script>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
           </script>
 </body>
 </html>
