--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <div id="container">
       <p class="tagline">
           Скрипт для распределения подарков на Новый год
-          <span style="float:right;">
-            <g:plusone></g:plusone>
-            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://paveldruzyak.github.com/new_year/" data-text="Скрипт для распределения подарков на Новый год" data-via="paveldruzyak" data-lang="ru" data-size="large" data-related="paveldruzyak"></a>
+          <span style="float:right;widht:175px">
+            <g:plusone size="tall"></g:plusone>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://paveldruzyak.github.com/new_year/" data-text="Скрипт для распределения подарков на Новый год" data-lang="ru" data-size="large" data-related="paveldruzyak" data-count="vertical"></a>
           </span>
       </p>
       <div id="main" role="main">
