--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <p class="tagline">
           Скрипт для распределения подарков на Новый год
           <span style="float:right;widht:175px">
-            <g:plusone size="tall"></g:plusone>
-            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://paveldruzyak.github.com/new_year/" data-text="Скрипт для распределения подарков на Новый год" data-lang="ru" data-size="large" data-related="paveldruzyak" data-count="vertical"></a>
+            <g:plusone></g:plusone>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://paveldruzyak.github.com/new_year/" data-text="Скрипт для распределения подарков на Новый год" data-lang="ru" data-related="paveldruzyak">Твитнуть</a>
           </span>
       </p>
       <div id="main" role="main">
