--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p class="tagline">
           Скрипт для распределения подарков на Новый год
           <span style="float:right;widht:175px">
-            <g:plusone></g:plusone>
+            <g:plusone size="medium"></g:plusone>
             <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://paveldruzyak.github.com/new_year/" data-text="Скрипт для распределения подарков на Новый год" data-lang="ru" data-related="paveldruzyak">Твитнуть</a>
           </span>
       </p>
