Change position for buttons

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <h1 class="title">Тайный санта</h1>
     </header>
     <div id="container">
+      <div style="float:right;widht:233px;paddint-top:22px">
+        <g:plusone size="medium"></g:plusone>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://paveldruzyak.github.com/new_year/" data-text="Скрипт для распределения подарков на Новый год" data-lang="ru" data-related="paveldruzyak">Твитнуть</a>
+      </div>
       <p class="tagline">
           Скрипт для распределения подарков на Новый год
-          <span style="float:right;widht:175px">
-            <g:plusone size="medium"></g:plusone>
-            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://paveldruzyak.github.com/new_year/" data-text="Скрипт для распределения подарков на Новый год" data-lang="ru" data-related="paveldruzyak">Твитнуть</a>
-          </span>
       </p>
       <div id="main" role="main">
         <div class="download-bar">
