--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
   <meta itemprop="name" content="Тайный санта">
   <meta itemprop="description" content="Скрипт для распределения подарков на Новый год">
   <meta itemprop="image" content="https://secure.gravatar.com/avatar/e69ea2d40777aad638a6b85041f76140?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png">
+  <style type="text/css">
+    .buttons {
+      float:right;
+      widht:233px;
+      paddint-top:22px !important;
+    }
+  </style>
 </head>
 
 <body>
@@ -27,7 +34,7 @@
       <h1 class="title">Тайный санта</h1>
     </header>
     <div id="container">
-      <div style="float:right;widht:233px;paddint-top:22px">
+      <div class='buttons'>
         <g:plusone size="medium"></g:plusone>
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://paveldruzyak.github.com/new_year/" data-text="Скрипт для распределения подарков на Новый год" data-lang="ru" data-related="paveldruzyak">Твитнуть</a>
       </div>
