--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <style type="text/css">
     .buttons {
       float:right;
-      widht:233px;
-      paddint-top:22px !important;
+      width:233px;
+      padding-top:22px !important;
     }
   </style>
 </head>
