Html5 for +1 button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="javascripts/script.js"></script>
 
   <title>Тайный санта</title>
-  <meta name="description" content="Сайтик для распределения подарков на Новый год">
+  <meta name="description" content="Скрипт для распределения подарков на Новый год">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta itemprop="name" content="Тайный санта">
@@ -35,7 +35,7 @@
     </header>
     <div id="container">
       <div class='buttons'>
-        <g:plusone size="medium"></g:plusone>
+        <div class="g-plusone" data-size="medium"></div>
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://paveldruzyak.github.com/new_year/" data-text="Скрипт для распределения подарков на Новый год" data-lang="ru" data-related="paveldruzyak">Твитнуть</a>
       </div>
       <p class="tagline">
